# Rsassy

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENCE.html  LICENSE  LICENSE-text.html  LICENSE-text.md  Makefile  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  cleanup  cleanup.win  configure  configure.win  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: search.R
articles/: api-and-coordinates.html  api-and-coordinates.md  backend-selection.html  backend-selection.md  connection-search.html  connection-search.md  fastx-iteration.html  fastx-iteration.md  getting-started.html  getting-started.md  index.html  index.md  source-installation-and-vendoring.html  source-installation-and-vendoring.md
inst/: AUTHORS  LICENCE.note
man/: print.sassy_features.Rd  print.sassy_matches.Rd  sassy_as_sam.Rd  sassy_crispr.Rd  sassy_fastx_iter.Rd  sassy_fastx_next.Rd  sassy_features.Rd  sassy_search.Rd  sassy_search_connection.Rd  sassy_searcher.Rd  sassy_searcher_search.Rd  sassy_set_backend.Rd
news/: index.html  index.md
reference/: index.html  index.md  print.sassy_features.html  print.sassy_features.md  print.sassy_matches.html  print.sassy_matches.md  sassy_as_sam.html  sassy_as_sam.md  sassy_crispr.html  sassy_crispr.md  sassy_fastx_iter.html  sassy_fastx_iter.md  sassy_fastx_next.html  sassy_fastx_next.md  sassy_features.html  sassy_features.md  sassy_search.html  sassy_search.md  sassy_searcher.html  (+7 more)
src/rust/: Cargo.toml  vendor.tar.xz
src/rust/src/: backend.rs  fastx.rs  lib.rs  search_many.rs
(+44 files in other folders)
